@@ -1,3 +1,8 @@
+2000-07-20  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Display.pm (parse_file_defn): Force case insensitive id match
+	(was doing half the job before and fialing to match _I)
+
 2000-06-14  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Basic.pm: Use Starlink::Versions
